force-app/main/default/objects/RecordCreationLog__c/RecordCreationLog__c.object-meta.xml
<CustomObject>
    <label>Record Creation Log</label>
    <nameField>
        <displayFormat>Log-{0}</displayFormat>
        <label>Record Creation Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Creation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>