force-app/main/default/objects/RecordCreationLog__c/fields/Created_Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Created_Record_Ids__c</fullName>
    <label>Created Record Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>