force-app/main/default/objects/RecordCreationLog__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>