force-app/main/default/objects/RecordCreationLog__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>